Integrate InstrumenterRunner with JUnit API